--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,22 @@
         "ext-iconv": "*",
         "symfony/asset": "^6.3",
         "symfony/console": "^6.3",
+        "symfony/debug-bundle": "^6.3",
         "symfony/dotenv": "^6.3",
         "symfony/flex": "^2",
         "symfony/form": "^6.3",
         "symfony/framework-bundle": "^6.3",
         "symfony/http-client": "^6.3",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "^6.3",
+        "symfony/security-bundle": "^6.3",
         "symfony/twig-bundle": "^6.3",
         "symfony/validator": "^6.3",
+        "symfony/web-profiler-bundle": "^6.3",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/yaml": "^6.3"
+        "symfony/yaml": "^6.3",
+        "twig/extra-bundle": "^3.7",
+        "twig/twig": "^3.7"
     },
     "config": {
         "allow-plugins": {
